Bug 324429 - "Show Bit Edit" menu selection is not remembered after mode switch away from and back to "Numerical System Mode"
Summary: "Show Bit Edit" menu selection is not remembered after mode switch away from ...
Status: RESOLVED FIXED
Alias: None
Product: kcalc
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.13
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Evan Teran
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-02 22:08 UTC by cat22
Modified: 2019-07-14 10:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Proposed patch (2.59 KB, patch)
2017-07-16 08:13 UTC, martonmiklos
Details
cmake errors (5.78 KB, text/plain)
2017-07-16 09:30 UTC, cat22
Details

Note You need to log in before you can comment on or make changes to this bug.
Description cat22 2013-09-02 22:08:28 UTC
In "Numerical System Mode" if you check the "Show Bit Edit" option using the  menu selection on the Settings menu and then switch modes and then switch back to "Numerical System Mode" the "Show Bit Edit" is now unchecked. e.g the "Show Bit Edit" selection isn't remembered. 
Note: The selection "IS" remembered if you stay in "Numerical System Mode" and close KClac and then reopen it.


Reproducible: Always

Steps to Reproduce:
1. On the Settings menu select "Numerical System Mode"
2. Select the "Show Bit Edit"  menu item  and verify you see the bit edit come up and the checkmark appear to the left of the "Show Bit Edit" menu item
3. Switch to another Mode on the Settings menu, the switch back to "Numerical System Mode" 
4. The bit edit is gone and the "Show Bit Edit" menu selection is unchecked

Actual Results:  
The selection of the "Show bit Edit" menu item is always cleared

Expected Results:  
The "Show Bit Edit" selection should be remembered

KCalc 2.13 under KDE 4.10.5 "release 1" on OpenSuse 12.3
Comment 1 martonmiklos 2017-07-16 08:13:38 UTC
Created attachment 106658 [details]
Proposed patch

Here is a patch which fixes this issue. Please review! Thank you in advance!
Comment 2 cat22 2017-07-16 09:13:40 UTC
I'm not setup to try and compile kcalc. Also, since i filed this bug I have moved on to Leap 42.2 but I can confirm this bug also exists under Leap. Can kcalc be compiled separately from other kde stuff? I will try and find the latest source and if i can compile it i will try your patch - otherwise if it works for you then I'll just wait for an update 
 Thanks for working on this.
Comment 3 martonmiklos 2017-07-16 09:18:15 UTC
The bug exist in the latest git commit in master (I have just tried it). 

Yes kcalc could be compiled without the rest of the kde stuff, you just need to install the proper development headers.
Comment 4 cat22 2017-07-16 09:30:08 UTC
Created attachment 106661 [details]
cmake errors

Can you tell me what packages (64 bit) to install? I get lots of cmake errors. (see attached file)
Comment 5 martonmiklos 2017-07-16 09:36:47 UTC
I am using KUbuntu, and I have done the package installation some time ago for compiling the kcalc, but here is my dpkg installation log from that timeframe when I played with it first:

libkf5attica-dev (5.18.0-0ubuntu1)
libkf5auth-bin-dev (5.18.0-0ubuntu1)
libkf5auth-dev (5.18.0-0ubuntu1)
libkf5codecs-dev (5.18.0-0ubuntu1)
libkf5completion-dev (5.18.0-0ubuntu1)
libkf5config-bin-dev (5.18.0-0ubuntu1)
libkf5config-dev (5.18.0-0ubuntu1)
libkf5configwidgets-dev (5.18.0-0ubuntu1)
libkf5coreaddons-bin-dev (5.18.0-0ubuntu1)
libkf5coreaddons-dev (5.18.0-0ubuntu1)
libkf5dbusaddons-dev (5.18.0-0ubuntu1)
libkf5globalaccel-dev (5.18.0-0ubuntu1)
libkf5guiaddons-dev (5.18.0-0ubuntu1)
libkf5i18n-dev (5.18.0-0ubuntu1)
libkf5iconthemes-dev (5.18.0-0ubuntu1)
libkf5itemviews-dev (5.18.0-0ubuntu1)
libkf5service-dev (5.18.0-0ubuntu1)
libkf5sonnet-dev (5.18.0-0ubuntu1)
libkf5textwidgets-dev (5.18.0-0ubuntu1)
libkf5widgetsaddons-dev (5.18.0-0ubuntu1)
libkf5windowsystem-dev (5.18.0-0ubuntu1)
libkf5xmlgui-dev (5.18.0-0ubuntu1)
libqt5scripttools5 (5.5.1+dfsg-2build1)
qtscript5-dev (5.5.1+dfsg-2build1)
imagemagick-6.q16 (8:6.8.9.9-7ubuntu5.6)
kdoctools-dev (5.18.0-0ubuntu1)
libkf5archive-dev (5.18.0-0ubuntu1)
liblouis-data (2.6.4-2)
liblouis9 (2.6.4-2)
liblouisutdml-bin (2.5.0-3)
liblouisutdml-data (2.5.0-3)
liblouisutdml6 (2.5.0-3)
libkf5notifications-dev (5.18.0-0ubuntu1)

You might not need them all, but hope this helps a bit.
Comment 6 cat22 2017-07-16 09:45:24 UTC
looks like I dont have any kf5*-dev items in 'yast/software management', probably i need a repo i don't have. I think for something like this tho, your results are good enough (at least for me they are)
Comment 7 Christoph Feck 2018-08-16 19:18:45 UTC
Git commit 4ecb1a0f377be6b0e6e816655e4b3e8c38301d96 by Christoph Feck, on behalf of Miklos Marton.
Committed on 16/08/2018 at 19:13.
Pushed by cfeck into branch 'master'.

Remember the Bitfield editor visiblity state

The bitfield editor can only be displayed in binary numeral mode.

If the user selects a different numeral mode, then switches back
to binary, it would be feasible to display the bitfield editor
again if last time it was opened.

Differential Revision: https://phabricator.kde.org/D8271

M  +12   -4    kcalc.cpp

https://commits.kde.org/kcalc/4ecb1a0f377be6b0e6e816655e4b3e8c38301d96
Comment 8 cat22 2019-07-13 01:06:01 UTC
I just tested this and its broken again

System Info:

openSUSE Leap 15.0 (x86_64) on kernel 4.12.14-lp150.12.64-default
KDE 5.45.0 Plasma 5.12.8
Qt: 5.9.4

From About->KCalc:

KCalc Version 17.12.3
KDE Frameworks 5.45.0
Qt 5.9.4 (built against 5.9.4)
The xcb windowing system
Comment 9 martonmiklos 2019-07-14 09:27:41 UTC
(In reply to k3bBug from comment #8)
> I just tested this and its broken again
> 
> System Info:
> 
> openSUSE Leap 15.0 (x86_64) on kernel 4.12.14-lp150.12.64-default
> KDE 5.45.0 Plasma 5.12.8
> Qt: 5.9.4
> 
> From About->KCalc:
> 
> KCalc Version 17.12.3
> KDE Frameworks 5.45.0
> Qt 5.9.4 (built against 5.9.4)
> The xcb windowing system

The KCalc v17.12.3 was tagged on Mar 8 2018 in git while the fixing commit was introduced in the v18.08.0.
Comment 10 cat22 2019-07-14 10:14:37 UTC
wow! you'd think openSuse Tumbleweed would be up to date, but apparently not.
Thanks for the info!
Comment 11 cat22 2019-07-14 10:20:01 UTC
My mistake, I did not mean tumbleweed in my prev comment, I meant Leap 15.0 -  its 3am here - sorry