Remember the Bitfield editor visiblity state

The bitfield editor can only be displayed in binary numeral mode.

If the user selects a different numeral mode, then switches back
to binary, it would be feasible to display the bitfield editor
again if last time it was opened.

BUG: 324429

Differential Revision: https://phabricator.kde.org/D8271